--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,12 @@
     color: #FD6E0A;
 }
 
+/* header  */
+.header{
+    background-image: url('../portfolio-resources/images/developer.png'), url('../portfolio-resources/images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
+}
 
 
 
@@ -22,6 +28,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0px 200px;
 }
 .nav-title{
     font-size: 45px;
@@ -29,6 +36,7 @@ nav{
 }
 nav ul{
     display: flex;
+    align-items: center;
 }
 nav ul li{
     list-style: none;
@@ -40,4 +48,36 @@ nav li a{
 }
 .dark-2{
     color: #474747;
+}
+.btn-primary{
+    background-color: #FD6E0A;
+    font-weight: bold;
+    color: white;
+    padding: 18px 35px;
+    font-size: 20px; 
+    border-radius: 5px;
+    border: none;
+}
+
+/* baneer styles */
+.banner-greting{
+    color: #474747;
+    font-size: 45px;
+    font-weight: 600px;
+}
+.banner-title{
+    font-weight: bold;
+    font-size: 85px;
+}
+.banner-img{
+    width: 580px;
+}
+.banner{
+    display: flex;
+    justify-content: space-between;
+    margin: 0px 35px 0px 230px;
+}
+.banner-content{
+    max-width: 580;
+    /* display: flex; */
 }
