--- a/style/style.css
+++ b/style/style.css
@@ -13,13 +13,28 @@
 .text-primary{
     color: #FD6E0A;
 }
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
+    width: 827px;
+    height: 120px;
+}
+.secondary-background{
+    background-color: #FFF8F3;
+}
 
 /* header  */
 .header{
     background-image: url('../portfolio-resources/images/developer.png'), url('../portfolio-resources/images/header_bg.png');
     background-repeat: no-repeat;
-    background-position: top left, bottom right;
+    background-position: top left, bottom right;background-color: #FFF8F3;
 }
+
 
 
 
@@ -80,4 +95,42 @@ nav li a{
 .banner-content{
     max-width: 580;
     /* display: flex; */
+} 
+.banner-description{
+    color: #757575;
+    font-size: 18px;
+    width: 585px;
+    height: 60px;
+
+}
+
+/* main styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* about styles */
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    width: 827px;
+    height: 288px;
+    text-align: center;
+    margin-top: 130px;
+}
+.about-items{
+    display: flex;
+    justify-content:space-around;
+    text-align:center
+}
+.item-title{
+    font-size: 17px;
+    color: #757575;
+    
+}
+.item-description{
+    font-size: 17px;
+    font-weight: bold;
+    color: #474747;
 }
